preserve deterministic change plan order